fix: drawer width on mobile

--- a/src/app/styles/normalize.css
+++ b/src/app/styles/normalize.css
@@ -12,10 +12,6 @@ body {
    overflow-y: scroll;
 }
 
-#left-drawer .ant-drawer-body {
-   padding: 0;
-}
-
 .ant-spin.overlay {
    position: absolute;
    z-index: 9999;
@@ -127,4 +123,12 @@ body {
 
 .custom-steps .ant-steps-item-finish .ant-steps-item-icon {
    background-color: var(--color-primary) !important; /* Колір завершених кроків */
+}
+
+#left-drawer .ant-drawer-body {
+   padding: 0;
+}
+
+.ant-drawer-content-wrapper {
+   width: 100% !important;
 }
